public/css/styles.css
/* Colours
	#9EE493
	#446CB3
 */

/* GENERAL */
body{
	margin:0px;
	padding:0px;
	font-family: Helvetica, Arial, sans-serif;
}
#container {
	width: 640px;
	margin: 0px auto;
}
h1 {
   	padding-top: 5px;
	margin-bottom: 25px;
}

a {
	color: #636b6f;
	text-decoration: none;
}

a:hover {
	text-decoration: none;
	color: #636b6f;
}

.return{
	margin-right: 20px;
	float: left;
    width: 50px;
	color: #9EE493;
}

/* WELCOME VIEW */
.tile {
    height: 150px;
    background-color: #446CB3;
    text-align: center;
    font-size: 25px;
    padding-top: 50px;
    margin-top:20px;
    border: 1px solid #636b6f;
	color: #F1F1F1;
	box-shadow: 3px 3px 3px rgba(0,0,0,.3);
}
.tile:hover {
	background-color: #F1F1F1;
	color: #446CB3;
	cursor: pointer;
}

/* TABLE */ 
table thead th {
    color: #fff;
    background-color: #9EE493;
    border-color: #9EE493 !important;
}

table th, table td{
	border-color: #9EE493 !important;
}

/* table {
	width: 100%;
	color: #333;
	border-collapse: collapse;
	border-spacing: 0;
}
table a{
	text-decoration: none;
	color: #333;
}
td, th {
	border: 1px solid #CCC;
	height: 30px;
}
td.name {
	width: 25%;
	text-align: left;
	padding-left: 20px;
}
td.description {
    width: 55%;
    text-align: left;
    padding-left: 20px;
}
td.action {
	width: 20%;
}
th {
	background: #DFDFDF;
	font-weight: bold;
	text-align: center;
}
tr:nth-child(even) td {
	background: #FEFEFE;
}
tr:nth-child(odd) td {
	background: #F1F1F1;
}
*/

/* FONT AWESOM ICONS */
i.fa:hover {
	cursor: pointer;
}
i.fa.action {
	float: left;
    margin-left: 15px;
    margin-top: 5px;
}
/*i.fa {
	font-size: 20px;
}
i.fa.fa-pencil {
	float: left;
	margin-right: 10px;
	margin-left: 35px;
}
i:hover{
	text-decoration: none;
}*/

/* BUTTONS */
.button-delete{
	border:none;
	background: none;
	margin-right:30px
}

/* FORM */
label {
	width:115px;
}
select.allSameStyle, input.allSameStyle{
	width:164px;
	height:28px;
}


/* IMAGE BOX */
.boxList{
	position: relative;
}

.boxList .return{
	margin-top: 20px;
}

.box .img{
	position: relative;
	background-image: url("../images/Desert.jpg");
	background-position: center;
	background-size: cover;
	height: 200px;
}

.box{
	transition: .3s;
	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
	-moz-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
	-webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
	margin-bottom: 30px;
}

.box:hover {
	-webkit-transform: translateY(-3px);
	-moz-transform: translateY(-3px);
	transform: translateY(-3px);
	box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.3);
	-moz-box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.3);
	-webkit-box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.3);
}


.box .img .title{
	position: absolute;
	bottom: 0;
	color: white;
    padding: 10px;
    font-weight: bold;
    font-size: 18px;
    background-color: rgba(0, 0, 0, 0.56);
    width: 100%;
}

.box .infos{
	position: relative;
	border: 1px solid #adadad;
	padding: 10px;
    min-height: 50px;
}

.box .infos .fa-pencil{
	position: absolute;
	right: 30px;
	top: 14px;
}

.box .infos .button-delete{
	position: absolute;
	right: 10px;
	top: 14px;
	margin-right: 0;
}

.boxList .fa-plus-circle{
	position: fixed;
	bottom: 45px;
	right: 16%;
    border-radius: 50%;
	font-size: 70px;
    border: 0;
    color: #446CB3;
}

.container{
	position: relative;
}

.container .search{
	position: absolute;
    width: 140px;
    top: 36px;
    right: 12px;
    border-radius: 0;
}

